Fixed jumping input box due to disappearing character counter

--- a/styles/prosilver/theme/mchat.css
+++ b/styles/prosilver/theme/mchat.css
@@ -200,7 +200,7 @@
 	padding: 5px 0 0;
 }
 
-#mchat-character-count.hidden {
+#mchat-character-count.invisible {
 	visibility: hidden;
 }
 
